# data_620

./: .gitignore  README.md  email_network.gexf  pyproject.toml  setup_nltk.py
.claude/: settings.local.json
assignment1/: assignment1.ipynb  assignment1_kh.ipynb
assignment2/: Data620Assignment2.ipynb  email_network.gexf  nx.html
assignment4/: DATA622Assignment4.ipynb
assignment5/: assignment5.ipynb
project1/: README.md  data.py  project_1.ipynb
project1/processed/: artist_artist_edges.csv  artist_attributes.csv  edges.csv  nodes.csv
project2/: Project2.ipynb
