[project]
name = "data-620"
version = "0.1.0"
description = "DATA 620: Web Analytics - CUNY SPS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "nltk>=3.9.2",
    "notebook>=7.5.3",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyvis>=0.3.2",
    "scipy>=1.17.0",
    "spotipy>=2.25.1",
    "python-dotenv>=1.0.0",
    "polars>=1.38.1",
]
